# maestro

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  REVIEW-CAMPAIGN-2026.md  pyproject.toml
.gemini/: config.yaml  styleguide.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  smoke.yaml
docs/plans/: 2026-05-21-maestro-v1-implementation.md
docs/specs/: 2026-05-21-maestro-design.md
scripts/: phase-sentinel.ps1  refresh_fixtures.sh  regen_aiostreams_schemas.sh
src/maestro/: __init__.py  annotations.py  config.py  errors.py  logging.py  middleware.py  server.py
src/maestro/aiostreams/: __init__.py  client.py  modify.py  redact.py  schemas.py  schemas_generated.py  templates.py  tools.py
src/maestro/compose/: __init__.py  find_best_stream.py  types.py
src/maestro/diagnose/: __init__.py  stack_health.py  tools.py
src/maestro/realdebrid/: __init__.py  client.py  filter_gate.py  tools.py
src/maestro/stremio/: __init__.py  client.py  tools.py
src/maestro/torrentio/: __init__.py  encoder.py  enums.py  tools.py
tests/integration/aiostreams/: test_tool_registration.py
tests/integration/compose/: test_registration.py
tests/integration/diagnose/: test_tool_registration.py
tests/integration/realdebrid/: test_tool_registration.py
tests/integration/stremio/: test_tool_registration.py
tests/integration/torrentio/: test_tool_registration.py
tests/schema_fidelity/: aiostreams_schema.sha256  schemas_generated.sha256  test_aiostreams_schema_pinned.py  test_generated_output_pinned.py  test_secret_keys_coverage.py
tests/smoke/: test_live_rd_user_info.py
tests/unit/: test_annotations.py  test_config.py  test_errors.py  test_logging.py  test_middleware.py  test_server.py
tests/unit/aiostreams/: test_client.py  test_modify.py  test_redact_cli.py  test_schemas.py  test_templates.py  test_tools_addon_mgmt.py  test_tools_generic_writes.py  test_tools_read.py  test_tools_save.py  test_tools_typed_writes.py
tests/unit/compose/: test_find_best_stream.py  test_types.py
tests/unit/diagnose/: test_stack_health.py  test_tools.py
tests/unit/realdebrid/: test_client.py  test_filter_gate.py  test_tools.py
tests/unit/stremio/: test_client.py  test_tools.py
tests/unit/torrentio/: test_encoder.py  test_enums.py  test_tools.py
